[B]Version 1.1.171[/B]
- javguru - fix playback, thumbnails
